[Bug] 티켓 복사 버그 수정 및 Ticket Optional하게 받게 수정